[package]
name = "client"
version = "0.1.0"
edition = "2024"

[dependencies]
libc = "0.2"
fuser = { version = "0.16", features = ["abi-7-28"] }
time = "0.3"
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.11", features = ["blocking", "json", "stream"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rpassword = "7.3"
chrono = { version = "0.4.20-rc.1" }
users = "0.11"
daemonize = "0.5"
signal-hook = "0.3"
clap = {version ="4.5", features=["derive"]}

[lib]
name = "client"
path = "src/fuse.rs"